assets/blog/AWS/4_EKS/dev/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "alb-ing-eks-vujade"
  namespace: "ns-vujade"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-group-attributes: load_balancing.algorithm.type=least_outstanding_requests
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '300'
    alb.ingress.kubernetes.io/success-codes: '200,404,405'

spec:
  rules:
  - http:
      paths:
      - path: /dl
        backend:
          serviceName: svc-dl
          servicePort: 11001
